k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: modax
  labels:
    name: modax
    environment: production
